# copublisher

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  publish_gzh_drafts.py  pyproject.toml  verify_install.py
.github/workflows/: ci.yml
config/: .gitignore
docs/: README.md  architecture-review.md  architecture-self-review.md  plan-media-publisher-independent-for-blue-ocean.md  plan.md  wechat_article_02.md
examples/: README.md  publish_lesson_example.py
src/copublisher/: __init__.py  __main__.py
src/copublisher/application/services/: blue_ocean_adapter.py  idempotency_service.py  org_run_reporter.py  result_builder.py
src/copublisher/core/: __init__.py  adapter.py  base.py  browser.py  devto.py  gzh_drafts.py  instagram.py  medium.py  tiktok.py  twitter.py  wechat.py  youtube.py
src/copublisher/domain/: error_codes.py  models.py  platform.py  result.py  tasks.py
src/copublisher/gui/: __init__.py  app.py
src/copublisher/infrastructure/: gzh_drafts_runner.py  registry.py
src/copublisher/shared/: __init__.py  config.py  io.py  security.py
src/media_publisher/: __main__.py
tests/: conftest.py  test_atomic_io.py  test_blue_ocean_adapter.py  test_cli_contract_backward_compat.py  test_default_registry.py  test_entry_refactor.py  test_idempotency_service.py  test_import_side_effects.py  test_job_cli.py  test_job_spec_models.py  test_job_subcommand.py  test_layering_no_core_imports.py  test_org_run_reporter.py  test_publish_content_usecase.py  test_registry_extension.py  test_run_result_schema_v1.py  test_security.py
(+13 files in other folders)
